--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,12 @@ unidiff>=0.7.5              # Patch parsing and application
 sentence-transformers>=2.2.0  # CPU-based embeddings for RAG
 ddgs>=1.0.0                 # DuckDuckGo metasearch for web_search tool (Phase 3)
 
+# WebSocket Server (Phase A: Headless Engine)
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+websockets>=13.0.0
+starlette>=0.41.0
+
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.24.0
