--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pydantic>=2.0.0
 # LLM Provider SDKs (Phase 1)
 openai>=1.0.0
 anthropic>=0.18.0
+google-generativeai>=0.8.0
 
 # Agent Frameworks
 crewai>=0.80.0
