--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install Ruff
         run: pip install ruff
@@ -48,12 +48,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: pulse-electron/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
         working-directory: pulse-electron
 
       - name: Run ESLint
@@ -73,14 +73,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Run tests (excluding integration)
         run: pytest -m "not integration" -v --tb=short
+        env:
+          PYTHONPATH: ${{ github.workspace }}
 
   # ---------------------------------------------------------------------------
   # TypeScript Type Check
@@ -95,12 +97,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: pulse-electron/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
         working-directory: pulse-electron
 
       - name: Run type check
@@ -122,14 +124,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: pulse-electron/package-lock.json
 
       - name: Install Python dependencies
@@ -151,7 +153,7 @@ jobs:
         shell: pwsh
 
       - name: Install Electron dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
         working-directory: pulse-electron
 
       - name: Build Electron app (no packaging)
