--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,11 @@ jobs:
           cache: "npm"
           cache-dependency-path: pulse-electron/package-lock.json
 
+      - name: Set up Python (for node-gyp)
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
       - name: Install dependencies
         run: npm install --legacy-peer-deps
         working-directory: pulse-electron
